--- a/public/scss/app.css
+++ b/public/scss/app.css
@@ -1,11 +1,8 @@
-#divided {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+#logo {
+  width: 40px;
 }
 
-#tutorImage,
-#pattern {
+#tutorImageDiv {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -15,8 +12,9 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+}
+
+#tutorImage {
+  border-radius: 50%;
 }
 /*# sourceMappingURL=app.css.map */
