--- a/public/scss/app.scss
+++ b/public/scss/app.scss
@@ -4,14 +4,65 @@
     align-items: center;
 }
 
+* {
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    background-color: rgb(243, 237, 209);
+}
+
+.navbar {
+    background-color: beige;
+}
+
 #logo {
     width: 40px;
 }
 
-#tutorImageDiv {
-    @include centre();
+.introPosition {
+    margin-top: 10%;
+    text-align: center;
 }
 
-#tutorImage {
+#tutorIntro {
+    font-size: 170%;
+    font-weight: 500;
+}
+
+#mathsIntro {
+    font-size: 130%;
+    font-weight: 400;
+}
+
+#tutorImg {
     border-radius: 50%;
+}
+
+#tutorDiv,
+#testimonialDiv,
+#contactDiv {
+    margin-top: 20%;
+    padding-left: 10%;
+    padding-right: 10%;
+}
+
+.heading {
+    font-weight: bold;
+}
+
+#copyright {
+    text-align: center;
+}
+
+footer {
+    margin-top: 20%;
+}
+
+@media only screen and (min-width: 720px) {
+    #introAndImage {
+        flex-direction: row;
+    }
 }
