--- a/public/scss/app.css
+++ b/public/scss/app.css
@@ -1,8 +1,3 @@
-* {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
 body {
   margin: 0;
   padding: 0;
@@ -20,6 +15,13 @@ body {
 .introPosition {
   margin-top: 10%;
   text-align: center;
+}
+
+.row {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 #tutorIntro {
@@ -46,6 +48,11 @@ body {
 
 .heading {
   font-weight: bold;
+  text-align: center;
+}
+
+#contactDiv {
+  height: 60vh;
 }
 
 #copyright {
@@ -53,15 +60,101 @@ body {
 }
 
 footer {
-  margin-top: 20%;
+  margin-top: 50%;
+  height: 40vh;
 }
 
-@media only screen and (min-width: 720px) {
-  #introAndImage {
+@media only screen and (min-width: 390px) and (orientation: portrait) {
+  #contactDiv {
+    height: 50vh;
+  }
+  footer {
+    height: 50vh;
+  }
+}
+
+@media only screen and (min-width: 768px) and (orientation: portrait) {
+  #contactDiv {
+    height: 30vh;
+  }
+  footer {
+    height: 60vh;
+  }
+}
+
+@media only screen and (min-width: 820px) and (orientation: portrait) {
+  #contactDiv {
+    height: 30vh;
+  }
+  footer {
+    height: 65vh;
+  }
+}
+
+@media only screen and (min-width: 912px) and (orientation: portrait) {
+  #contactDiv {
+    height: 20vh;
+  }
+  footer {
+    height: 70vh;
+  }
+}
+
+@media only screen and (min-width: 653px) and (orientation: landscape) {
+  #contactDiv {
+    height: 100vh;
+  }
+  footer {
+    height: 30vh;
+  }
+}
+
+@media only screen and (min-width: 667px) and (orientation: landscape) {
+  #contactDiv {
+    height: 90vh;
+  }
+  footer {
+    height: 30vh;
+  }
+}
+
+@media only screen and (min-width: 720px) and (orientation: landscape) {
+  .row {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
+  }
+  #tutorIntro {
+    margin-top: 10%;
+  }
+  .navbar {
+    padding-right: 2% !important;
+    padding-left: 2% !important;
+  }
+  #contactDiv {
+    height: 70vh;
+  }
+  footer {
+    height: 20vh;
+  }
+}
+
+@media only screen and (min-width: 1024px) and (orientation: landscape) {
+  #contactDiv {
+    height: 40vh;
+  }
+  footer {
+    height: 50vh;
+  }
+}
+
+@media only screen and (min-width: 1180px) and (orientation: landscape) {
+  #contactDiv {
+    height: 30vh;
+  }
+  footer {
+    height: 50vh;
   }
 }
 /*# sourceMappingURL=app.css.map */
