--- a/public/scss/app.css
+++ b/public/scss/app.css
@@ -1,11 +1,10 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: #f3edd1;
 }
 
 .navbar {
-  background-color: beige;
+  background-color: #fdfdfb;
 }
 
 #logo {
@@ -13,8 +12,11 @@ body {
 }
 
 .introPosition {
-  margin-top: 10%;
   text-align: center;
+}
+
+#introDiv {
+  background-color: #c47669;
 }
 
 .row {
@@ -24,35 +26,68 @@ body {
           flex-direction: column;
 }
 
+#introText {
+  margin-top: 10%;
+  background-color: #c47669;
+}
+
 #tutorIntro {
-  font-size: 170%;
-  font-weight: 500;
+  font-size: 200%;
+  font-weight: 600;
+  color: #faf6f5;
 }
 
 #mathsIntro {
-  font-size: 130%;
+  font-size: 160%;
   font-weight: 400;
+  color: #faf6f5;
 }
 
 #tutorImg {
-  border-radius: 50%;
+  margin-top: 10%;
+  margin-bottom: 10%;
+  margin-right: 10%;
 }
 
-#tutorDiv,
+#aboutDiv,
+#contactDiv,
+#footerDiv {
+  background-color: #d3f0eb;
+}
+
+#testimonialDiv {
+  background-color: #a2a3a3;
+  color: #faf6f5;
+}
+
+#aboutDiv,
 #testimonialDiv,
 #contactDiv {
-  margin-top: 20%;
   padding-left: 10%;
   padding-right: 10%;
 }
 
+#testimonialDiv,
+#contactDiv {
+  margin-top: -6%;
+}
+
+#aboutDiv {
+  height: 243vh;
+}
+
+#testimonialDiv {
+  height: 248vh;
+}
+
 .heading {
+  padding-top: 10%;
   font-weight: bold;
   text-align: center;
 }
 
 #contactDiv {
-  height: 60vh;
+  height: 70vh;
 }
 
 #copyright {
@@ -60,8 +95,12 @@ body {
 }
 
 footer {
-  margin-top: 50%;
-  height: 40vh;
+  height: 30vh;
+}
+
+#submitButton {
+  background-color: #c47669 !important;
+  color: white !important;
 }
 
 @media only screen and (min-width: 390px) and (orientation: portrait) {
