--- a/public/scss/app.scss
+++ b/public/scss/app.scss
@@ -7,11 +7,10 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: rgb(243, 237, 209);
 }
 
 .navbar {
-    background-color: beige;
+    background-color: #fdfdfb;
 }
 
 #logo {
@@ -19,43 +18,80 @@ body {
 }
 
 .introPosition {
-    margin-top: 10%;
     text-align: center;
+}
+
+#introDiv {
+    background-color: rgb(196, 118, 105);
 }
 
 .row {
     flex-direction: column;
 }
 
+#introText {
+    margin-top: 10%;
+    background-color: rgb(196, 118, 105);
+}
+
 #tutorIntro {
-    font-size: 170%;
-    font-weight: 500;
+    font-size: 200%;
+    font-weight: 600;
+    color: rgb(250, 246, 245);
 }
 
 #mathsIntro {
-    font-size: 130%;
+    font-size: 160%;
     font-weight: 400;
+    color: rgb(250, 246, 245);
 }
 
 #tutorImg {
-    border-radius: 50%;
+    margin-top: 10%;
+    margin-bottom: 10%;
+    margin-right: 10%;
 }
 
-#tutorDiv,
+#aboutDiv,
+#contactDiv,
+#footerDiv {
+    background-color: rgb(211, 240, 235);
+}
+
+#testimonialDiv {
+    // background-color: rgb(229, 231, 231);
+    background-color: rgb(162, 163, 163);
+    color: rgb(250, 246, 245);
+}
+
+#aboutDiv,
 #testimonialDiv,
 #contactDiv {
-    margin-top: 20%;
     padding-left: 10%;
     padding-right: 10%;
 }
 
+#testimonialDiv,
+#contactDiv {
+    margin-top: -6%;
+}
+
+#aboutDiv {
+    height: 243vh;
+}
+
+#testimonialDiv {
+    height: 248vh;
+}
+
 .heading {
+    padding-top: 10%;
     font-weight: bold;
     text-align: center;
 }
 
 #contactDiv {
-    height: 60vh;
+    height: 70vh;
 }
 
 #copyright {
@@ -63,8 +99,12 @@ body {
 }
 
 footer {
-    margin-top: 50%;
-    height: 40vh;
+    height: 30vh;
+}
+
+#submitButton {
+    background-color: rgb(196, 118, 105) !important;
+    color: white !important;
 }
 
 // Portrait
