--- a/public/scss/app.scss
+++ b/public/scss/app.scss
@@ -10,11 +10,19 @@ body {
 }
 
 .navbar {
-    background-color: #fdfdfb;
+    background-color: #bfe2f0;
+}
+
+.navbar-brand {
+    color: #2d6e5b !important;
 }
 
 #logo {
     width: 40px;
+}
+
+#maths {
+    width: 100%;
 }
 
 .introPosition {
@@ -22,7 +30,7 @@ body {
 }
 
 #introDiv {
-    background-color: rgb(196, 118, 105);
+    background-color: #bfe2f0;
 }
 
 .row {
@@ -30,38 +38,41 @@ body {
 }
 
 #introText {
-    margin-top: 10%;
-    background-color: rgb(196, 118, 105);
+    margin-top: 2%;
+    background-color: #bfe2f0;
 }
 
 #tutorIntro {
-    font-size: 200%;
-    font-weight: 600;
-    color: rgb(250, 246, 245);
-}
-
-#mathsIntro {
-    font-size: 160%;
+    padding-left: 10%;
+    padding-right: 10%;
+    font-size: 1em;
     font-weight: 400;
-    color: rgb(250, 246, 245);
+    color: #2d6e5b;
 }
 
 #tutorImg {
-    margin-top: 10%;
-    margin-bottom: 10%;
+    margin-top: 6%;
     margin-right: 10%;
+}
+
+#tutorPara {
+    padding-top: 10%;
+    padding-left: 10%;
+    padding-right: 10%;
+    font-size: 1em;
+    font-weight: 400;
+    color: #2d6e5b;
 }
 
 #aboutDiv,
 #contactDiv,
 #footerDiv {
-    background-color: rgb(211, 240, 235);
+    background-color: #e1eef3;
 }
 
 #testimonialDiv {
-    // background-color: rgb(229, 231, 231);
-    background-color: rgb(162, 163, 163);
-    color: rgb(250, 246, 245);
+    background-color: #bfe2f0;
+    color: #2d6e5b;
 }
 
 #aboutDiv,
@@ -77,7 +88,8 @@ body {
 }
 
 #aboutDiv {
-    height: 243vh;
+    height: 193vh;
+    color: #2d6e5b;
 }
 
 #testimonialDiv {
@@ -88,14 +100,17 @@ body {
     padding-top: 10%;
     font-weight: bold;
     text-align: center;
+    color: #2d6e5b;
 }
 
 #contactDiv {
     height: 70vh;
+    color: #2d6e5b !important;
 }
 
 #copyright {
     text-align: center;
+    color: #2d6e5b !important;
 }
 
 footer {
@@ -103,44 +118,141 @@ footer {
 }
 
 #submitButton {
-    background-color: rgb(196, 118, 105) !important;
+    background-color: #398bac !important;
     color: white !important;
 }
 
 // Portrait
-@media only screen and (min-width: 390px) and (orientation: portrait) {
-    #contactDiv {
-        height: 50vh;
+
+@media only screen and (min-width: 360px) and (orientation: portrait) {
+    #testimonialDiv {
+        margin-top: -122%;
     }
-    footer {
-        height: 50vh;
+    #contactDiv {
+        margin-top: -168%;
+        height: 70vh;
+    }
+    #footerDiv {
+        height: 40vh;
+    }
+}
+
+@media only screen and (min-width: 375px) and (orientation: portrait) {
+    #testimonialDiv {
+        margin-top: -91%;
+    }
+    #contactDiv {
+        margin-top: -125%;
+        height: 70vh;
+    }
+}
+
+@media only screen and (min-width: 390px) and (orientation: portrait) {
+    #testimonialDiv {
+        margin-top: -176%;
+    }
+    #contactDiv {
+        margin-top: -232%;
+        height: 60vh;
+    }
+}
+
+@media only screen and (min-width: 393px) and (orientation: portrait) {
+    #testimonialDiv {
+        margin-top: -178%;
+    }
+    #contactDiv {
+        margin-top: -241%;
+        height: 60vh;
+    }
+}
+
+@media only screen and (min-width: 412px) and (orientation: portrait) {
+    #testimonialDiv {
+        margin-top: -216%;
+        height: 167vh;
+    }
+    #contactDiv {
+        margin-top: -100%;
+        height: 60vh;
+    }
+    #footerDiv {
+        height: 60vh;
+    }
+}
+
+@media only screen and (min-width: 412px) and (orientation: portrait) {
+    #testimonialDiv {
+        margin-top: -206%;
+    }
+    #contactDiv {
+        margin-top: -91%;
+    }
+    #footerDiv {
+        height: 55vh;
+    }
+}
+
+@media only screen and (min-width: 540px) and (orientation: portrait) {
+    #testimonialDiv {
+        margin-top: -128%;
+    }
+    #contactDiv {
+        margin-top: -58%;
+        height: 70vh;
+    }
+    #footerDiv {
+        height: 45vh;
     }
 }
 
 @media only screen and (min-width: 768px) and (orientation: portrait) {
-    #contactDiv {
-        height: 30vh;
+    #tutorImg {
+        margin-right: 0%;
     }
-    footer {
+    #introDiv {
+        padding-bottom: 8%;
+    }
+    #testimonialDiv {
+        margin-top: -182%;
+        height: 167vh;
+    }
+    #contactDiv {
+        margin-top: -127%;
+        height: 60vh;
+    }
+    #footerDiv {
         height: 60vh;
     }
 }
 
 @media only screen and (min-width: 820px) and (orientation: portrait) {
-    #contactDiv {
-        height: 30vh;
+    .navbar {
+        padding-left: 5%;
+        padding-right: 5%;
     }
-    footer {
+    #testimonialDiv {
+        margin-top: -207%;
+    }
+    #contactDiv {
+        margin-top: -147%;
+        height: 50vh;
+    }
+    #footerDiv {
         height: 65vh;
     }
 }
 
 @media only screen and (min-width: 912px) and (orientation: portrait) {
-    #contactDiv {
-        height: 20vh;
+    #testimonialDiv {
+        margin-top: -225%;
     }
-    footer {
-        height: 70vh;
+    #contactDiv {
+        margin-top: -176%;
+        height: 50vh;
+    }
+    #footerDiv {
+        height: 65vh;
     }
 }
 
