--- a/public/scss/app.css
+++ b/public/scss/app.css
@@ -15,297 +15,8 @@ body {
   width: 40px;
 }
 
-#maths {
-  width: 100%;
-}
-
-.introPosition {
-  text-align: center;
-}
-
-#introDiv {
-  background-color: #bfe2f0;
-}
-
-.row {
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-#introText {
-  margin-top: 2%;
-  background-color: #bfe2f0;
-}
-
-#tutorIntro {
-  padding-left: 10%;
-  padding-right: 10%;
-  font-size: 1em;
-  font-weight: 400;
-  color: #2d6e5b;
-}
-
+#maths,
 #tutorImg {
-  margin-top: 6%;
-  margin-right: 10%;
-}
-
-#tutorPara {
-  padding-top: 10%;
-  padding-left: 10%;
-  padding-right: 10%;
-  font-size: 1em;
-  font-weight: 400;
-  color: #2d6e5b;
-}
-
-#aboutDiv,
-#contactDiv,
-#footerDiv {
-  background-color: #e1eef3;
-}
-
-#testimonialDiv {
-  background-color: #bfe2f0;
-  color: #2d6e5b;
-}
-
-#aboutDiv,
-#testimonialDiv,
-#contactDiv {
-  padding-left: 10%;
-  padding-right: 10%;
-}
-
-#testimonialDiv,
-#contactDiv {
-  margin-top: -6%;
-}
-
-#aboutDiv {
-  height: 193vh;
-  color: #2d6e5b;
-}
-
-#testimonialDiv {
-  height: 248vh;
-}
-
-.heading {
-  padding-top: 10%;
-  font-weight: bold;
-  text-align: center;
-  color: #2d6e5b;
-}
-
-#contactDiv {
-  height: 70vh;
-  color: #2d6e5b !important;
-}
-
-#copyright {
-  text-align: center;
-  color: #2d6e5b !important;
-}
-
-footer {
-  height: 30vh;
-}
-
-#submitButton {
-  background-color: #398bac !important;
-  color: white !important;
-}
-
-@media only screen and (min-width: 360px) and (orientation: portrait) {
-  #testimonialDiv {
-    margin-top: -122%;
-  }
-  #contactDiv {
-    margin-top: -168%;
-    height: 70vh;
-  }
-  #footerDiv {
-    height: 40vh;
-  }
-}
-
-@media only screen and (min-width: 375px) and (orientation: portrait) {
-  #testimonialDiv {
-    margin-top: -91%;
-  }
-  #contactDiv {
-    margin-top: -125%;
-    height: 70vh;
-  }
-}
-
-@media only screen and (min-width: 390px) and (orientation: portrait) {
-  #testimonialDiv {
-    margin-top: -176%;
-  }
-  #contactDiv {
-    margin-top: -232%;
-    height: 60vh;
-  }
-}
-
-@media only screen and (min-width: 393px) and (orientation: portrait) {
-  #testimonialDiv {
-    margin-top: -178%;
-  }
-  #contactDiv {
-    margin-top: -241%;
-    height: 60vh;
-  }
-}
-
-@media only screen and (min-width: 412px) and (orientation: portrait) {
-  #testimonialDiv {
-    margin-top: -216%;
-    height: 167vh;
-  }
-  #contactDiv {
-    margin-top: -100%;
-    height: 60vh;
-  }
-  #footerDiv {
-    height: 60vh;
-  }
-}
-
-@media only screen and (min-width: 412px) and (orientation: portrait) {
-  #testimonialDiv {
-    margin-top: -206%;
-  }
-  #contactDiv {
-    margin-top: -91%;
-  }
-  #footerDiv {
-    height: 55vh;
-  }
-}
-
-@media only screen and (min-width: 540px) and (orientation: portrait) {
-  #testimonialDiv {
-    margin-top: -128%;
-  }
-  #contactDiv {
-    margin-top: -58%;
-    height: 70vh;
-  }
-  #footerDiv {
-    height: 45vh;
-  }
-}
-
-@media only screen and (min-width: 768px) and (orientation: portrait) {
-  #tutorImg {
-    margin-right: 0%;
-  }
-  #introDiv {
-    padding-bottom: 8%;
-  }
-  #testimonialDiv {
-    margin-top: -182%;
-    height: 167vh;
-  }
-  #contactDiv {
-    margin-top: -127%;
-    height: 60vh;
-  }
-  #footerDiv {
-    height: 60vh;
-  }
-}
-
-@media only screen and (min-width: 820px) and (orientation: portrait) {
-  .navbar {
-    padding-left: 5%;
-    padding-right: 5%;
-  }
-  #testimonialDiv {
-    margin-top: -207%;
-  }
-  #contactDiv {
-    margin-top: -147%;
-    height: 50vh;
-  }
-  #footerDiv {
-    height: 65vh;
-  }
-}
-
-@media only screen and (min-width: 912px) and (orientation: portrait) {
-  #testimonialDiv {
-    margin-top: -225%;
-  }
-  #contactDiv {
-    margin-top: -176%;
-    height: 50vh;
-  }
-  #footerDiv {
-    height: 65vh;
-  }
-}
-
-@media only screen and (min-width: 653px) and (orientation: landscape) {
-  #contactDiv {
-    height: 100vh;
-  }
-  footer {
-    height: 30vh;
-  }
-}
-
-@media only screen and (min-width: 667px) and (orientation: landscape) {
-  #contactDiv {
-    height: 90vh;
-  }
-  footer {
-    height: 30vh;
-  }
-}
-
-@media only screen and (min-width: 720px) and (orientation: landscape) {
-  .row {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-  }
-  #tutorIntro {
-    margin-top: 10%;
-  }
-  .navbar {
-    padding-right: 2% !important;
-    padding-left: 2% !important;
-  }
-  #contactDiv {
-    height: 70vh;
-  }
-  footer {
-    height: 20vh;
-  }
-}
-
-@media only screen and (min-width: 1024px) and (orientation: landscape) {
-  #contactDiv {
-    height: 40vh;
-  }
-  footer {
-    height: 50vh;
-  }
-}
-
-@media only screen and (min-width: 1180px) and (orientation: landscape) {
-  #contactDiv {
-    height: 30vh;
-  }
-  footer {
-    height: 50vh;
-  }
+  width: 100%;
 }
 /*# sourceMappingURL=app.css.map */
