--- a/public/scss/app.css
+++ b/public/scss/app.css
@@ -1,29 +1,3 @@
-.slide {
-  -webkit-animation-duration: 3s;
-          animation-duration: 3s;
-  -webkit-animation-name: slideup;
-          animation-name: slideup;
-  margin-top: 0%;
-}
-
-@-webkit-keyframes slideup {
-  from {
-    margin-top: 30%;
-  }
-  to {
-    margin-top: 0%;
-  }
-}
-
-@keyframes slideup {
-  from {
-    margin-top: 30%;
-  }
-  to {
-    margin-top: 0%;
-  }
-}
-
 body {
   margin: 0;
   padding: 0;
@@ -47,6 +21,77 @@ section {
 
 #maths {
   width: 100%;
+}
+
+#landingDiv {
+  position: relative;
+}
+
+#tutorName {
+  position: absolute;
+  margin-top: 10%;
+  margin-left: 70%;
+  font-size: 0.8em;
+  font-weight: 600;
+}
+
+.nameDown {
+  -webkit-animation-duration: 3s;
+          animation-duration: 3s;
+  -webkit-animation-name: namedown;
+          animation-name: namedown;
+  margin-top: 3%;
+}
+
+@-webkit-keyframes namedown {
+  from {
+    margin-top: 3%;
+  }
+  to {
+    margin-top: 10%;
+  }
+}
+
+@keyframes namedown {
+  from {
+    margin-top: 3%;
+  }
+  to {
+    margin-top: 10%;
+  }
+}
+
+#tutorSubject {
+  position: absolute;
+  margin-top: 15%;
+  margin-left: 70%;
+  font-size: 0.8em;
+}
+
+.subjectDown {
+  -webkit-animation-duration: 3s;
+          animation-duration: 3s;
+  -webkit-animation-name: subjectdown;
+          animation-name: subjectdown;
+  margin-top: 8%;
+}
+
+@-webkit-keyframes subjectdown {
+  from {
+    margin-top: 8%;
+  }
+  to {
+    margin-top: 15%;
+  }
+}
+
+@keyframes subjectdown {
+  from {
+    margin-top: 8%;
+  }
+  to {
+    margin-top: 15%;
+  }
 }
 
 #tutorImg {
@@ -108,6 +153,10 @@ section {
 }
 
 @media only screen and (min-width: 375px) and (orientation: portrait) {
+  #tutorName,
+  #tutorSubject {
+    font-size: 1em;
+  }
   #aboutDiv {
     margin-top: -5%;
   }
@@ -129,12 +178,20 @@ section {
 }
 
 @media only screen and (min-width: 540px) and (orientation: portrait) {
+  #tutorName,
+  #tutorSubject {
+    font-size: 1em;
+  }
   #footerDiv {
     height: 45vh;
   }
 }
 
 @media only screen and (min-width: 768px) and (orientation: portrait) {
+  #tutorName,
+  #tutorSubject {
+    font-size: 1.1em;
+  }
   #tutorImg {
     margin-right: 4%;
   }
@@ -153,18 +210,30 @@ section {
 }
 
 @media only screen and (min-width: 912px) and (orientation: portrait) {
+  #tutorName,
+  #tutorSubject {
+    font-size: 1.3em;
+  }
   #footerDiv {
     height: 70vh;
   }
 }
 
 @media only screen and (min-width: 653px) and (orientation: landscape) {
+  #tutorName,
+  #tutorSubject {
+    font-size: 1.1em;
+  }
   #aboutDiv {
     margin-top: -5%;
   }
 }
 
 @media only screen and (min-width: 720px) and (orientation: landscape) {
+  #tutorName,
+  #tutorSubject {
+    font-size: 1.2em;
+  }
   #tutorImg {
     margin-right: 1%;
   }
@@ -173,6 +242,13 @@ section {
 @media only screen and (min-width: 740px) and (orientation: landscape) {
   #tutorImg {
     margin-right: 2%;
+  }
+}
+
+@media only screen and (min-width: 851px) and (orientation: landscape) {
+  #tutorName,
+  #tutorSubject {
+    font-size: 1.3em;
   }
 }
 
