--- a/public/scss/app.scss
+++ b/public/scss/app.scss
@@ -89,10 +89,6 @@ section {
     background-color: $backgroundColour;
 }
 
-.row {
-    flex-direction: column;
-}
-
 #tutorIntro {
     font-size: 1em;
     font-weight: 400;
@@ -171,9 +167,13 @@ section {
 }
 
 @media only screen and (min-width: 768px) and (orientation: portrait) {
+    .heading {
+        font-size: 1.2em;
+        margin-bottom: 5%;
+    }
     #tutorName,
     #tutorSubject {
-        font-size: 1.1em;
+        font-size: 1.3em;
     }
     #tutorImg {
         margin-right: 4%;
@@ -184,6 +184,10 @@ section {
 }
 
 @media only screen and (min-width: 820px) and (orientation: portrait) {
+    #tutorName,
+    #tutorSubject {
+        font-size: 1.4em;
+    }
     #tutorImg {
         margin-right: -5%;
     }
@@ -195,7 +199,7 @@ section {
 @media only screen and (min-width: 912px) and (orientation: portrait) {
     #tutorName,
     #tutorSubject {
-        font-size: 1.3em;
+        font-size: 1.4em;
     }
     #footerDiv {
         height: 70vh;
@@ -217,7 +221,7 @@ section {
 @media only screen and (min-width: 720px) and (orientation: landscape) {
     #tutorName,
     #tutorSubject {
-        font-size: 1.2em;
+        font-size: 1.3em;
     }
     #tutorImg {
         margin-right: 1%;
@@ -230,15 +234,40 @@ section {
     }
 }
 
+@media only screen and (min-width: 844px) and (orientation: landscape) {
+    .heading {
+        font-size: 1.2em;
+        margin-bottom: 5%;
+    }
+}
+
 @media only screen and (min-width: 851px) and (orientation: landscape) {
     #tutorName,
     #tutorSubject {
-        font-size: 1.3em;
+        font-size: 1.4em;
     }
 }
 
 @media only screen and (min-width: 1024px) and (orientation: landscape) {
+    #tutorName,
+    #tutorSubject {
+        font-size: 1.4em;
+    }
     #footerDiv {
         height: 60vh;
+    }
+}
+
+@media only screen and (min-width: 1280px) and (orientation: landscape) {
+    #tutorName,
+    #tutorSubject {
+        font-size: 1.7em;
+    }
+}
+
+@media only screen and (min-width: 1368px) and (orientation: landscape) {
+    #tutorName,
+    #tutorSubject {
+        font-size: 1.7em;
     }
 }
